[tool.poetry]
name = "bitcoin-mining-python"
version = "0.1.0"
description = ""
authors = ["Aiden Szeto <aszeto35@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pearpy = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
